<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general_settings">
        <CheckBoxPreference
            android:defaultValue="@bool/notecipher_uselines_default"
            android:key="use_lines_in_notes"
            android:summary="@string/use_lines_in_notes_summ"
            android:title="@string/use_lines_in_notes" />
        <CheckBoxPreference
            android:defaultValue="@bool/cacheword_vibrate_default"
            android:key="@string/preference_vibrate_when_unlocked"
            android:summary="@string/vibrate_when_unlocked_summ"
            android:title="@string/vibrate_when_unlocked" />
        <ListPreference
            android:key="@string/preference_theme"
            android:enabled="false"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:title="Theme">
        </ListPreference>
        <SeekBarPreference
            android:key="@string/preference_text_size"
            android:enabled="false"
            android:title="Text Size"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Security">
        <SwitchPreference
            android:key="@string/preference_disable_encryption"
            android:title="Disable Encryption"
            app:enabled="false"
            android:icon="@drawable/ic_no_encryption"
            android:summary="Disabling encryption removes all security measures that prevent other people from accessing your notes."/>
        <Preference
            android:key="@string/preference_change_lock_timeout"
            android:title="@string/change_timeout_prompt_title" />
        <EditTextPreference
            android:dialogTitle="@string/preference_change_passphrase"
            android:key="@string/preference_change_passphrase"
            android:title="@string/preference_change_passphrase" />
        <SwitchPreference
            android:key="@string/preference_use_biometric"
            android:title="Use Biometric Authentication"
            android:icon="@drawable/ic_fingerprint"
            android:summary="Use the biometric hardware of the device to unlock your notes">

        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Danger Zone">
        <Preference
            android:key="@string/preference_reset_data"
            android:title="Reset all data"
            android:icon="@drawable/ic_erase"
            android:summary="There is no way to recover your password. If you lost yours, you can reset all data here."/>
    </PreferenceCategory>
</PreferenceScreen>